# Vaelon

./: README.md
docs/: Flow_PRD_v1.docx  agent-mode-layout.md  aiRouter-design.md  database-schema.md  implementation_plan.md  phase0-progress.md  progress_report.md
vaelon_desktop/: package-lock.json
vaelon_desktop/vaelon/: package-lock.json  package.json  tsconfig.json
vaelon_desktop/vaelon/src/: App.tsx
vaelon_desktop/vaelon/src-tauri/: Cargo.toml  tauri.conf.json
vaelon_desktop/vaelon/src-tauri/src/: lib.rs  main.rs
vaelon_desktop/vaelon/src-tauri/src/agent/: actions.rs  mod.rs  recovery.rs  state.rs
vaelon_desktop/vaelon/src-tauri/src/agent/roles/: codegen.rs  mod.rs  observer.rs  planner.rs  reviewer.rs
vaelon_desktop/vaelon/src-tauri/src/agent/tools/: mod.rs
vaelon_desktop/vaelon/src-tauri/src/commands/: mod.rs
vaelon_desktop/vaelon/src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
vaelon_desktop/vaelon/src-tauri/src/fs/: mod.rs
vaelon_desktop/vaelon/src-tauri/src/llm/: embeddings.rs  groq.rs  mod.rs  ollama.rs
vaelon_desktop/vaelon/src-tauri/src/rag/: indexer.rs
vaelon_desktop/vaelon/src-tauri/src/terminal/: mod.rs
vaelon_desktop/vaelon/src/components/: Header.jsx  HowItWorks.jsx  NoteInput.jsx  Quiz.jsx  RightSidebar.jsx  StatusBar.jsx
vaelon_desktop/vaelon/src/components/workspace/: AIPanel.tsx  ChatHistoryPanel.tsx  CommandPalette.jsx  Sidebar.tsx  (+6 more)
vaelon_desktop/vaelon/src/context/: AuthContext.tsx
vaelon_desktop/vaelon/src/ipc/: client.ts
vaelon_desktop/vaelon/src/lib/: ai.js  aiRouter.js  aiRouter.ts  ocr.js  pdf.js  supabase.ts
vaelon_desktop/vaelon/src/store/: agentMemoryStore.ts  agentStore.ts  appStore.ts  chatStore.ts  noteStore.ts  terminalStore.ts  workspaceStore.ts
workspace-main/: package-lock.json
workspace-main/note_ai-main/: .gitignore  README.md  build_output.txt  index.html  package-lock.json  package.json  vite.config.js
workspace-main/note_ai-main/api/: chat.js  cleanup.js  ocr.js  quiz.js  summarize.js  tts.js
workspace-main/note_ai-main/scratch/: test_models.js
workspace-main/note_ai-main/src/: App.css  App.jsx  index.css
workspace-main/note_ai-main/src-tauri/: Cargo.toml  tauri.conf.json
workspace-main/note_ai-main/src-tauri/src/: lib.rs  main.rs
workspace-main/note_ai-main/src/app/: chat.js  note.js  project.js  task.js  workspace.js
workspace-main/note_ai-main/src/components/: Auth.jsx  ChatPanel.jsx  Features.jsx  LeftSidebar.jsx  Onboarding.jsx  RichEditor.jsx  Skeleton.jsx  SummaryPdf.jsx  SummaryResult.jsx  TopBar.jsx
workspace-main/note_ai-main/src/context/: AuthContext.jsx
workspace-main/note_ai-main/src/core/: ai.js  commands.js  db.js  events.js
workspace-main/note_ai-main/src/lib/: ai.js  aiRouter.js  chatApi.js  db.js  migration.js
workspace-main/note_ai-main/src/store/: appStore.js  noteStore.js
workspace-main/note_ai-main/supabase/migrations/: 001_chat_history.sql
(+44 files in other folders)
