[package]
name = "vaelon"
version = "0.1.0"
description = "Vaelon — Local-first AI workspace with Rust core"
authors = ["Vaelon Team"]
edition = "2021"

[lib]
# The `_lib` suffix avoids name collision with the bin on Windows
name = "vaelon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri ─────────────────────────────────────────────────────────────────────
tauri               = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"

# ── Serialization ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async Runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures      = "0.3"

# ── Database ──────────────────────────────────────────────────────────────────
rusqlite = { version = "0.31", features = ["bundled"] }

# ── HTTP / LLM ────────────────────────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "stream"] }

# ── File System Watching ──────────────────────────────────────────────────────
notify = "6"

# ── Terminal / PTY ────────────────────────────────────────────────────────────
portable-pty = "0.8"

# ── Error Handling ────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
dirs    = "5"
base64  = "0.22"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
incremental = true

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
